<resources>
    <string name="app_name">Transpire</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="new_account_form">New Account Form</string>
    <string name="username_form">Username:</string>
    <string name="password_form">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="travel_distance">Travel Distance</string>
    <string name="miles">miles</string>
    <string name="submit">Submit</string>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string name="uber">Address</string>
    <string name="map">Maps</string>
    <string name="address">Place Holder</string>

    <string name="home_page">Home Page</string>
    <string name="location">{Location}</string>
    <string name="direction">Directions</string>
    <string name="rides">Address</string>
    <string name="location_info">Location Info</string>
    <string name="yes">Y</string>
    <string name="no">N</string>
    <string name="setting">Setting</string>
    <string name="history">History</string>

    <string name="photos">Photos</string>
    <string name="photos_fill_text">Photos and stuff need to go here</string>
    <string name="post_photo">Post Photo</string>
    <string name="post_comment">Post Comment</string>

    <string name="invalid_form_toast">Please Fill Every Entry To This Form to Create Account</string>
    <string name="invalid_username_toast">Username Taken. Try using a different username.</string>

</resources>