<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:actionBarNavMode="tabs">

    <!--    title-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/home_page"
            android:textColor="@color/black"
            android:textSize="50sp" />
    </LinearLayout>

    <!--    login-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.3">

            <RadioButton
                android:id="@+id/check_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:id="@+id/check_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>
    </LinearLayout>

    <!--    new user-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/direction"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <!--    new user-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rides_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rides"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- filler -->
    <TextView
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/location_nav_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/location_info"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform"
                android:lines="1"
                android:textSize="24sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/history_nav_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/history"
                android:lines="1"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/setting_nav_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting"
                android:autoSizeTextType="uniform"
                android:lines="1"
                android:textColor="@color/black" />

        </FrameLayout>

    </LinearLayout>



</LinearLayout>
