<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    title-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/photos"
            android:textColor="@color/black"
            android:textSize="50sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:text="@string/photos_fill_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            >

            <TextView
                android:text="@string/post_photo"
                android:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"/>
        </FrameLayout>



        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            >

            <TextView
                android:text="@string/post_comment"
                android:autoSizeTextType="uniform"
                android:textStyle="bold"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"/>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>